--- a/firebase.json
+++ b/firebase.json
@@ -1,12 +1,16 @@
 {
   "hosting": {
-    "cleanUrls": true,
-    "trailingSlash": false,
-    "public": "frontend/dist",
+    "public": "dist",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
     ]
   }
 }
