--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -28,4 +28,4 @@ jobs:
           LAST_COMMIT_MESSAGE=$(git log -1 --pretty=%B)
           curl -s -X POST -H "Content-Type: application/json" \
             -d "{\"content\": \"💵 [Google Ads Test App](https://app--ads.web.app/) deployed! Commit: **$LAST_COMMIT_MESSAGE**\"}" \
-            ${{ secrets.Add }}
+            ${{ secrets.DISCORD_WEBHOOK_URL }}
