Add interstitial & reward

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -27,5 +27,5 @@ jobs:
         run: |
           LAST_COMMIT_MESSAGE=$(git log -1 --pretty=%B)
           curl -s -X POST -H "Content-Type: application/json" \
-            -d "{\"content\": \"💵 [Google Ads Test App](https://app--ads.web.app/) deployed! Commit: **$LAST_COMMIT_MESSAGE**\"}" \
+            -d "{\"content\": \"🆒 [Google Ads Test App](https://app--ads.web.app/) deployed! Commit: **$LAST_COMMIT_MESSAGE**\"}" \
             ${{ secrets.DISCORD_WEBHOOK_URL }}
